Fixed stretching mobile sidebar

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,6 +4,7 @@
 
 $z-drawer: 10;
 $z-status-message: 11;
+$z-sidebar: 12;
 
 $sidebar-hide-bp: 768px;
 $status-message-reposition-bp: 470px;
